# gradient-alignment

./: .gitignore  README.md  pyproject.toml
experiments/: cifar100_cnn_adam.yaml  cifar100_cnn_sgd.yaml  cifar100_fc_adam.yaml  cifar100_fc_sgd.yaml  cifar100_resnet18_adam.yaml  cifar100_resnet18_sgd.yaml  cifar10_cnn_adam.yaml  cifar10_cnn_sgd.yaml  cifar10_fc_adam.yaml  cifar10_fc_sgd.yaml  cifar10_resnet18_adam.yaml  cifar10_resnet18_sgd.yaml  cifar10_sgd.yaml  mnist_cnn_adam.yaml  mnist_cnn_sgd.yaml  mnist_fc_adam.yaml  mnist_fc_sgd.yaml  mnist_resnet18_adam.yaml  mnist_resnet18_sgd.yaml  tiny_imagenet_cnn_adam.yaml  tiny_imagenet_cnn_sgd.yaml  tiny_imagenet_fc_adam.yaml  tiny_imagenet_fc_sgd.yaml  tiny_imagenet_resnet18_adam.yaml  tiny_imagenet_resnet18_sgd.yaml
pending/: Gap de generalización como variable objetivo.md  Plan de análisis congelado.md  Protocolo de evaluación y plan de análisis.md
src/: analysis.py  config.py  data.py  load_data.py  logger.py  metrics_runner.py  models.py  run_matrix.py  run_pilot.py  seed.py  train.py
tests/: synthetic.py  test_analysis.py  test_config.py  test_data.py  test_gns_simple.py  test_gradient_confusion.py  test_gradient_disparity.py  test_gsnr.py  test_gwa.py  test_m_coherence.py  test_metrics_runner.py  test_models.py  test_normalized_variance.py  test_ntk_alignment.py  test_pipeline.py  test_primitives.py  test_run_matrix.py  test_run_pilot.py  test_stiffness.py  test_streaming.py  test_timing.py  test_train_helpers.py  test_tse.py
thesis/: .gitignore  .latexmkrc  main.bbl  main.tex  references.bib
(+80 files in other folders)
