[project]
name = "gradient-alignment"
version = "0.1.0"
description = "Studying gradient alignment in deep learning."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "torchvision",
]

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]

[tool.pytest.ini_options]
pythonpath = ["src", "tests"]
testpaths = ["tests"]
